--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav>
                 <a href="#" class="logo">
-                    <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/8e7cdebac521016ee3cfbebe74ef1d2e~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=14579&refresh_token=1f3dbdc6&x-expires=1766908800&x-signature=rGzp82dLykwWqAzk8ddM8%2Fz%2BH7c%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=my3"
+                    <img src="Background/logo.jpeg"
                         alt=""
                         style="height: 40px; width: 40px; border-radius: 50%; object-fit: cover; margin-right: 10px; vertical-align: middle;">
                     <span style="vertical-align: middle;">Shiropractic</span>
@@ -570,3 +570,4 @@
 
 
 </html>
+
